Fix mobile scroll overflow bug

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -62,7 +62,7 @@ form {
 @media (min-width: 600px) {
 	.pregamescreen form { padding: 0 10% }
 }
-@media (min-height: 32em) {
+@media (min-height: 32em) and (pointer: fine) {
 	html { overflow: hidden }
 	.pregamescreen { margin-top: 50vh }
 	.pregamescreen form { transform: translateY(-50%) }
